--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "search params",
     "react-router-dom"
   ],
-  "author": "Your Name",
+  "author": "Osama Samarrai",
   "license": "MIT",
   "repository": {
     "type": "git",
